# py-plotter

./: README.md  requirements.txt  setup.cfg  setup.py
py_plotter/: example.py  plot.py  tick_formatter.py
py_plotter/demo/: chinese.py  formatter.py
py_plotter/tools/: get_fonts.py
pyplotter/: example.py  plot.py  tick_formatter.py
pyplotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyplotter/demo/: cdf.py  tick.py
