[metadata]
name = py-plotter
version = 3.0
author = Zhaojie
long_description = file: README.md # 从文件中读取
license = MIT
url = https://github.com/wenzhaojie/py-plotter
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    scipy

[options.entry_points]
console_scripts =
    py_plotter = py_plotter.hello:main
